--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ a {
   transition: all linear 0.2s;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   border: 1px solid rgba(0, 0, 0, 0.15);
+  z-index: 999;
 }
 .dropdown li {
   transition: all linear 0.2s;
@@ -290,4 +291,199 @@ a {
   font-size: 25px;
   font-weight: 600;
   color: #59B210;
+}
+
+#banner {
+  padding: 30px 0;
+}
+#banner .row .banner__menu {
+  text-transform: capitalize;
+  font-weight: 600;
+}
+#banner .row .banner__menu .banner__menu_head {
+  padding: 15px;
+  background-color: #59B210;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  text-transform: capitalize;
+}
+#banner .row .banner__menu .banner__menu_list ul {
+  border-left: 1px solid #dddada;
+  border-right: 1px solid #dddada;
+  border-bottom: 1px solid #dddada;
+  border-radius: 0 0 5px 5px;
+}
+#banner .row .banner__menu .banner__menu_list ul li {
+  padding: 10px 14px;
+  background-color: #F9F9F9;
+  position: relative;
+  transition: all linear 0.3s;
+  cursor: pointer;
+}
+#banner .row .banner__menu .banner__menu_list ul li:hover {
+  background-color: #59B210;
+}
+#banner .row .banner__menu .banner__menu_list ul li:hover a {
+  color: #fff;
+}
+#banner .row .banner__menu .banner__menu_list ul li:hover a i {
+  opacity: 11;
+  color: #fff;
+}
+#banner .row .banner__menu .banner__menu_list ul li a {
+  color: #5D5D5D;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#banner .row .banner__menu .banner__menu_list ul li a i {
+  font-size: 12px;
+  opacity: 0;
+}
+#banner .row .banner__menu .banner__menu_list ul .menu_list_li {
+  background-color: #fff;
+}
+#banner .row .banner__content .slick__slider {
+  position: relative;
+}
+#banner .row .banner__content .slick__slider:hover .slick-dots {
+  opacity: 99;
+  visibility: visible;
+  bottom: -22px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 {
+  width: 100%;
+  height: 520px;
+  background: url(../images/banner1.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail {
+  padding: 75px 0 100px 100px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail h4 {
+  font-size: 50px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 40px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail h2 {
+  font-size: 80px;
+  font-weight: 800;
+  color: #5D5D5D;
+  margin-bottom: 20px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail h5 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 110%;
+  margin-bottom: 10px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail p {
+  font-size: 12px;
+  -moz-columns: #5D5D5D;
+       columns: #5D5D5D;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail .common__btn {
+  text-transform: capitalize;
+  display: inline-block;
+  padding: 15px 35px;
+  background-color: #59B210;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  transition: all linear 0.2s;
+}
+#banner .row .banner__content .slick__slider .slider__content_1 .content__detail .common__btn:hover {
+  opacity: 0.7;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 {
+  width: 100%;
+  height: 520px;
+  background: url(../images/banner2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail {
+  padding: 75px 0 100px 100px;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail h4 {
+  font-size: 50px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 40px;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail h2 {
+  font-size: 80px;
+  font-weight: 800;
+  color: #5D5D5D;
+  margin-bottom: 20px;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail h5 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 110%;
+  margin-bottom: 10px;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail p {
+  font-size: 12px;
+  -moz-columns: #5D5D5D;
+       columns: #5D5D5D;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail .common__btn {
+  text-transform: capitalize;
+  display: inline-block;
+  padding: 15px 35px;
+  background-color: #59B210;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  transition: all linear 0.2s;
+}
+#banner .row .banner__content .slick__slider .slider__content_2 .content__detail .common__btn:hover {
+  opacity: 0.7;
+}
+#banner .row .banner__content .slick__slider .slick-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 80px;
+  background-color: #fff;
+  height: 50px;
+  position: absolute;
+  bottom: -35px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+  transition: all linear 0.2s;
+  opacity: 0;
+  visibility: hidden;
+}
+#banner .row .banner__content .slick__slider .slick-dots li {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: rgba(124, 118, 175, 0.652);
+}
+#banner .row .banner__content .slick__slider .slick-dots li button {
+  display: none;
+}
+#banner .row .banner__content .slick__slider .slick-dots .slick-active {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #59B210;
 }/*# sourceMappingURL=style.css.map */
