--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,6 +72,7 @@ a{
     transition: all linear 0.2s;
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
     border: 1px solid rgba(0,0,0,.15);
+    z-index: 999;
     li{
         transition: all linear 0.2s;
         padding: 7px 15px;
@@ -356,9 +357,211 @@ a{
 }
 
 
+// -----------banner------------------
 
+#banner{
+    padding: 30px 0;
+    .row{
+        .banner__menu{
+            text-transform: capitalize;
+            font-weight: 600;
+            .banner__menu_head{
+                padding: 15px;
+                background-color: $green;
+                border-radius: 5px 5px 0 0;
+                color: $white;
+                text-transform: capitalize;
+            }
+            .banner__menu_list{
+                ul{
+                    border-left: 1px solid $darkgray;
+                    border-right: 1px solid $darkgray;
+                    border-bottom: 1px solid $darkgray;
+                    border-radius: 0 0 5px 5px;                    
+                    li{
+                        padding: 10px 14px;
+                        background-color: $gray;
+                        position: relative;
+                        transition: all linear 0.3s;
+                        cursor: pointer;
+                        
+                        &:hover{
+                            background-color: $green;
+                            a{
+                                color: $white;
+                                i{
+                                    opacity: 11;
+                                    color: $white;
+                                }
+                            }                            
+                        }
+                        a{
+                            color: $navtext;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            i{
+                                font-size: 12px;
+                                opacity: 0;
+                            }
+                        }                        
+                    }
+                    .menu_list_li{
+                        background-color: $white;
+                    }
+                }
+            }
+        }
+        .banner__content{
+            .slick__slider{
+                position: relative;
+                &:hover{
+                    .slick-dots{
+                        opacity: 99;
+                        visibility: visible;
+                        bottom: -22px;
+                    }
+                }
+                .slider__content_1{
+                    width: 100%;
+                    height: 520px;
+                    background: url(../images/banner1.jpg);
+                    background-position: center;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    .content__detail{
+                        padding: 75px 0 100px 100px;
+                        h4{
+                            font-size: 50px;
+                            font-weight: 400;
+                            color: $navtext;
+                            text-transform: uppercase;
+                            line-height: 40px;
+                        }
+                        h2{
+                            font-size: 80px;
+                            font-weight: 800;
+                            color: $navtext;
+                            margin-bottom: 20px;
+                        }
+                        h5{
+                            font-size: 28px;
+                            font-weight: 400;
+                            color: $navtext;
+                            text-transform: uppercase;
+                            line-height: 110%;
+                            margin-bottom: 10px;
+                        }
+                        p{
+                            font-size: 12px;
+                            columns: $navtext;
+                            text-transform: uppercase;
+                            margin-bottom: 30px;
 
+                        }
+                        .common__btn{
+                            text-transform: capitalize;
+                            display: inline-block;
+                            padding: 15px 35px;
+                            background-color: $green;
+                            color: $white;
+                            font-weight: 700;
+                            border-radius: 5px;
+                            transition: all linear 0.2s;
+                            &:hover{
+                                opacity: 0.7;
+                            }
+                        }
+                    }
+                }
+                .slider__content_2{
+                    width: 100%;
+                    height: 520px;
+                    background: url(../images/banner2.jpg);
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    .content__detail{
+                        padding: 75px 0 100px 100px;
+                        h4{
+                            font-size: 50px;
+                            font-weight: 400;
+                            color: $navtext;
+                            text-transform: uppercase;
+                            line-height: 40px;
+                        }
+                        h2{
+                            font-size: 80px;
+                            font-weight: 800;
+                            color: $navtext;
+                            margin-bottom: 20px;
+                        }
+                        h5{
+                            font-size: 28px;
+                            font-weight: 400;
+                            color: $navtext;
+                            text-transform: uppercase;
+                            line-height: 110%;
+                            margin-bottom: 10px;
+                        }
+                        p{
+                            font-size: 12px;
+                            columns: $navtext;
+                            text-transform: uppercase;
+                            margin-bottom: 30px;
 
+                        }
+                        .common__btn{
+                            text-transform: capitalize;
+                            display: inline-block;
+                            padding: 15px 35px;
+                            background-color: $green;
+                            color: $white;
+                            font-weight: 700;
+                            border-radius: 5px;
+                            transition: all linear 0.2s;
+                            &:hover{
+                                opacity: 0.7;
+                            }
+                        }
+                    }
+                }
+                .slick-dots{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 10px;
+                    width: 80px;
+                    background-color: $white;
+                    height: 50px;
+                    position: absolute;
+                    bottom:-35px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    border-radius: 5px;
+                    transition: all linear 0.2s;
+                    opacity: 0;
+                    visibility: hidden;
+                    li{
+                        width: 16px;
+                        height: 16px;
+                        border-radius: 50%;
+                        background: rgba(124, 118, 175, 0.652);
+                        button{
+                            display: none;
+                        }
+                    }
+                    .slick-active{
+                        width: 16px;
+                        height: 16px;
+                        border-radius: 50%;
+                        background: $green;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
