--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,7 +64,7 @@ a{
     flex-direction: column;
     background-color: $white;
     padding: 10px 3px !important;
-    border-top: 1px solid $green;
+    border-top: 1px solid $green !important;
     top: 0px;
     visibility: hidden;
     opacity: 0;
@@ -547,6 +547,11 @@ a{
                         height: 16px;
                         border-radius: 50%;
                         background: rgba(124, 118, 175, 0.652);
+                        transition: all linear 0.2s;
+                        &:hover{
+                            cursor: pointer;
+                            background-color: $green;
+                        }
                         button{
                             display: none;
                         }
