--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,9 @@ a {
 #banner {
   padding: 30px 0;
 }
+#banner .row {
+  margin-bottom: 30px;
+}
 #banner .row .banner__menu {
   text-transform: capitalize;
   font-weight: 600;
@@ -349,7 +352,7 @@ a {
 #banner .row .banner__content .slick__slider:hover .slick-dots {
   opacity: 99;
   visibility: visible;
-  bottom: -22px;
+  bottom: -20px;
 }
 #banner .row .banner__content .slick__slider .slider__content_1 {
   width: 100%;
@@ -460,11 +463,11 @@ a {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  width: 80px;
+  width: 70px;
   background-color: #fff;
-  height: 50px;
+  height: 40px;
   position: absolute;
-  bottom: -35px;
+  bottom: -30px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 5px;
@@ -491,4 +494,77 @@ a {
   height: 16px;
   border-radius: 50%;
   background: #59B210;
+}
+#banner .row .mobile .banner__mobile {
+  width: 100%;
+  position: relative;
+  padding: 50px 30px 50px 30px;
+  text-transform: capitalize;
+  display: block;
+  overflow: hidden;
+}
+#banner .row .mobile .banner__mobile:hover img {
+  opacity: 0.9;
+  transform: rotate(-1deg) scale(1.1);
+}
+#banner .row .mobile .banner__mobile h2 {
+  font-weight: 800;
+  color: #4F6276;
+  font-style: 36px;
+  z-index: 22;
+  position: relative;
+}
+#banner .row .mobile .banner__mobile h4 {
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 33px;
+  z-index: 22;
+  position: relative;
+  color: #4F6276;
+}
+#banner .row .mobile .banner__mobile img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: all linear 0.2s;
+}
+#banner .row .mobile .banner__watch {
+  width: 100%;
+  position: relative;
+  padding: 50px 30px 50px 30px;
+  text-transform: capitalize;
+  display: block;
+  overflow: hidden;
+  text-align: right;
+}
+#banner .row .mobile .banner__watch:hover img {
+  opacity: 0.9;
+  transform: rotate(-1deg) scale(1.1);
+}
+#banner .row .mobile .banner__watch h2 {
+  font-weight: 800;
+  color: #4F6276;
+  font-style: 36px;
+  z-index: 22;
+  position: relative;
+}
+#banner .row .mobile .banner__watch h4 {
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 33px;
+  z-index: 22;
+  position: relative;
+  color: #4F6276;
+}
+#banner .row .mobile .banner__watch img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: all linear 0.2s;
 }/*# sourceMappingURL=style.css.map */
